init go project, add migrations