@@ -1,15 +1,28 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon 
+# Stage 1: Build stage
+FROM golang:1.22-alpine3.20 AS build
 
-FROM openjdk:8-jre-slim
+# Set the working directory
+WORKDIR /server
 
-EXPOSE 8080
+# Copy and download dependencies
+COPY go.mod go.sum ./
 
-RUN mkdir /app
+RUN go mod download
 
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+# Copy the source code
+COPY . .
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+# Build the Go application
+RUN CGO_ENABLED=0 GOOS=linux go build -o webserver cmd/webserver/webserver.go
 
+# Stage 2: Final stage
+FROM alpine:latest AS build-release-stage
+
+# Set the working directory
+WORKDIR /server
+
+# Copy the binary from the build stage
+COPY --from=build /server/webserver .
+
+# Set the entrypoint command
+ENTRYPOINT ["/server/webserver"]
